@@ -14,20 +14,20 @@ DESCRIPTION:
 mbuffer is a raplacement for buffer with additional functionality:
 
 # display of i/o speed
-# optional use of memory mapped i/o for huge buffers
+# optional use of memory mapped i/o for huge buffer files
 # multithreaded instead of sharedmemory ipc
 # multi-volume support
-# auto-loader support (TEST IT!)
-# compatible command-line options
+# auto-loader support
+# network support
+# buffer compatible command-line options
 # --? bugs to hunt ?-- :-(
 
 
 NETWORKING:
 ==================
-The included networking code is based on TCP and should
-therefore be fairly robust out of the box. To use it
-you should know the basics of TCP/IP. Use only
-on a trusted LAN, as there is no builtin security.
+The included networking code is based on TCP/IP.  To use it you should
+know the basics of TCP/IP. Use it only on a trusted LAN, as there is no
+builtin security.
 
 
 TESTING:
@@ -54,11 +54,11 @@ This software has been tested under the following operatingsystems:
 
 64 Bit Buffers:
 ===============
-The buffer limit is sysconf(_SC_SEM_VALUE_MAX)*Blocksize. This
-usually limits the maximum number of blocks to 2G-1, because
-semaphores are implemented using an int, which is on most architectures
-a 32 Bit word. This limit is currently a non-issue, but might be resolved
-in a future release, by using condition variables.
+The buffer limit is sysconf(_SC_SEM_VALUE_MAX)*Blocksize. This usually
+limits the maximum number of blocks to 2G-1, because semaphores are
+implemented using an int, which is on most architectures a 32 Bit word.
+This limit is currently a non-issue, but might be resolved in a future
+release, by using condition variables.
 
 If the total buffer size is 2GB or larger, you will need to compile
 mbuffer as a 64bit executable. This requires that you have a 64bit
